--- a/index.html
+++ b/index.html
@@ -31,5 +31,16 @@
 </div><!--end log form -->
  <div id="videos-container"></div>
 </body>
+<script src="dist/RTCMultiConnection.min.js"></script>
+
+<!-- custom layout for HTML5 audio/video elements -->
+ <script src="getMediaElement.js"></script>
+ 
+ <!-- socket.io for signaling -->
+ <script src="/socket.io/socket.io.js"></script>
+		
+ <script src="getScreenId.js"></script>
+ 
  <script src="script.js"></script>
+ 
 </html>
